--- a/OrangeHRM/pom.xml
+++ b/OrangeHRM/pom.xml
@@ -52,6 +52,15 @@
     <version>2.41.2</version>
 	</dependency>
     
+    <!-- https://mvnrepository.com/artifact/log4j/log4j -->
+<dependency>
+    <groupId>log4j</groupId>
+    <artifactId>log4j</artifactId>
+    <version>1.2.17</version>
+</dependency>
+
+
+
   </dependencies>
 
   <build>
@@ -107,6 +116,13 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
+        
+        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-deploy-plugin -->
+<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-deploy-plugin</artifactId>
+    <version>2.8.1</version>
+</plugin>
       </plugins>
     </pluginManagement>
   </build>
